--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -46,7 +46,7 @@ body {
 .searches-rank__options {
   display: flex;
   align-items: center;
-
+  background-color: #f9fafc;
   border: 1px solid #e3e7ee;
   margin-top: 19px;
 }
@@ -63,6 +63,7 @@ body {
 
 .active {
   color: #222222;
+  background-color: #ffffff;
 }
 
 .searches-rank__number:first-child {
